Flexible Example for ESGF Staging